# quillmedical

./: .dockerignore  .gitignore  .gitleaks.toml  .markdownlint.json  .pnp.cjs  .pre-commit-config.yaml  .yarnrc.yml  CONTRACT.md  Just  Justfile  LICENSE  README.md  REFACTORING_SUMMARY.md  SPEC.md  TODO.md  caddyfile  commit-msg.txt  compose.ci.yml  compose.dev.yml  compose.frontend.yml  compose.prod.cloud-run.yml  compose.prod.fhir-openehr.yml  compose.yml  cookies.txt  cspell.config.json  docker-compose.yml  package-lock.json  package.json  renovate.json  saved_useful_things.txt  temp.md
.github/: architecture.md  copilot-instructions.md  dependabot.yml
.husky/: pre-commit
.zap/: rules.tsv
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/docker/: entrypoint.sh
backend/alembic/versions/: 055bc31fb937_updates_for_mypy.py  0d836462f7f7_.py  197844c56085_add_email_verified_to_users.py  1e6d47593843_add_push_subscriptions_table.py  28fd87ca9463_add_user_roles.py  2e24f1879e51_add_is_active_to_sites_table.py  3d3e9ba39b1d_add_token_version_to_users.py  3f28ddb4031e_message_fks_cascade_to_restrict.py  49c5bacfa481_init_auth_tables.py  4c072d8106a9_.py  58e3011782fa_.py  597b0f9d0f9d_add_sites_organisation_site_and_site_.py  61bc37adb8f7_adding_totp.py  65817fed5f7a_.py  6a4b0e5b7e7f_updates_for_mypy.py  6b4cd8726e1f_add_unique_clinical_lead_per_site_.py  7a44a91ac55a_add_site_registration_to_question_bank_.py  8a6bfd7b4ce9_updates_for_mypy.py  8e5f0b755530_add_question_bank_org_status_table.py  94bc5e6d4155_add_full_name_to_users.py  a086be88e60e_updates_for_mypy.py  bdb2df886116_.py  cbac001_add_cbac_fields_to_users.py  ce0e2ca7d2ca_updates_for_mypy.py  d281376e497d_add_exam_ref_to_assessments.py  e51ecb1aaf56_.py  f98e1c93dcd7_.py  msg001_add_messaging_tables.py  msg002_add_include_patient_as_participant.py  org001_add_org_scoped_access_models.py  pm001_add_patient_metadata_table.py  sp001_add_system_permissions_to_users.py
backend/app/: __init__.py  config.py  db.py  deps.py  ehrbase_client.py  email_send.py  fhir_client.py  log_context.py  logging_config.py  main.py  messaging.py  models.py  organisations.py  patient_records.py  push.py  push_send.py  security.py
backend/app/cbac/: __init__.py  base_professions.py  competencies.py  decorators.py
backend/app/db/: __init__.py  auth_db.py
backend/app/features/: __init__.py
backend/app/features/teaching/: __init__.py  certificate.py  email_templates.py  mdx_parser.py  models.py  router.py  schemas.py  scoring.py  storage.py  sync.py  tooling_validate.py  validate.py
backend/app/schemas/: __init__.py  auth.py  cbac.py  features.py  letters.py  messaging.py
backend/app/system_permissions/: __init__.py  decorators.py  permissions.py
backend/app/utils/: colors.py
backend/docker/: entrypoint.sh
backend/scripts/: add_gender.py  add_role_to_user.py  add_test_patients.py  admin_cli.py  backfill_avatar_gradients.py  backfill_gradient_indices.py  create_superuser.py  create_test_user.py  create_user.py  create_user_with_role.py  dump_openapi.py  generate_vapid_keys.py  preview_certificate.py  remove_avatar_gradients.py  seed_ci.py  seed_messages.py  update_patients.py  update_system_permissions.py
backend/tests/: conftest.py  test_admin_cli.py  test_auth.py  test_change_password.py  test_clinical_services.py  test_colors.py  test_config.py  test_db.py  test_ehrbase_client.py  test_ehrbase_integration.py  test_email_send.py  test_email_templates.py  test_email_verification.py  test_fhir_client.py  test_fhir_integration.py  test_log_context.py  test_main_endpoints.py  test_messaging.py  test_models.py  test_organisation_features.py  test_patient_records.py  test_patients.py  test_profile_update.py  test_push.py  test_push_send.py  test_rate_limiting.py  test_registration_guard.py  test_security.py  test_security_pentest.py  test_site_staff.py  test_teaching_certificate.py  test_teaching_mdx_parser.py  test_teaching_router.py  test_teaching_scoring.py  test_teaching_storage.py  test_teaching_sync.py  test_teaching_validate.py  test_tooling_validate.py  test_validate_clinical_lead.py
caddy/: Caddyfile.dev
dev-scripts/: README.md  _guard.sh  create-5-patients.sh  delete-all-patient-data.sh  dev-env-check.sh  seed-teaching-data.sh  sync-teaching-data.sh
docs/: .gitignore  index.md  mkdocs.yml
docs/docs/: ABAC.md  (+3 more)
frontend/: .gitignore  .lintstagedrc.json (create)  # optional: staged-only linting  .pnp.cjs  .semgrep.yml  .stylelintrc.json  Dockerfile  dev-start.sh  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.check.json  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
infra/: .gitignore  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
prompts/: cbac.md  code-documentation.md  commit-push.md  create-docs-docs.md  create-roadmap.md  fast-api-docs.md  index.md  read-copilot-instructions.md  strong-static-typing-defensive-programming.md
safety/: clinical-safety-officer-overview.md
scripts/: README.md  notification.sh  run-ci-checks.sh  run-github-actions-locally.sh
shared/: base-professions.yaml  competencies.yaml  jurisdiction-config.yaml
temp/: appointments-overview.md
(+1365 files in other folders)
