[project]
name = "backend"
version = "0.1.0"
description = "Backend fastAPI and git services"
authors = [
    {name = "Cotswoldsmaker",email = "mark@letsdodigital.org"}
]
requires-python = "==3.13.*"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.35",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "pyotp (>=2.8.0,<3.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}
mkdocs-material = "^9.6.20"
griffe = "^1.14.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.10"
mike = "^2.1.3"

[tool.ruff]
target-version = "py313"
line-length = 79
lint.select = ["E", "F", "W", "I", "UP", "B"]
lint.ignore = ["E501"]
exclude = ["alembic/versions"]

[tool.black]
target-version = ["py313"]
line-length = 79
# Exclude alembic revision files under backend/alembic/versions
# Black expects a regex string; match paths that include 'backend/alembic/versions'
exclude = "(^|/)backend/alembic/versions(/|$)"

[tool.mypy]
python_version = "3.13"
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --maxfail=1"
testpaths = ["tests"]
